--- a/.github/workflows/build-web-app.yml
+++ b/.github/workflows/build-web-app.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v4
       - uses: actions/setup-node@v4
         with: 
-          node-version-file: '.npmrc'
+          node-version-file: '.nvmrc'
           cache: 'npm'
           cache-dependency-path: subdir/package-lock.json
       
