run  coverage and publish to github pages under /coverage

--- a/.github/workflows/build-web-app.yml
+++ b/.github/workflows/build-web-app.yml
@@ -12,15 +12,29 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+        fetch-depth: 0
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
           cache: "npm"
 
-      - run: npm ci
+      - name: Install Dependencies
+        run: npm ci
 
-      - run: npm run build
+      - name: Test
+        run: npm run test:coverage
+
+      - name: Build
+        run: npm run build
+
+      - name: Copy coverage to dist
+        run: |
+          mkdir ./dist/coverage
+          cp -R ./coverage/* ./dist/coverage
 
       - name: Upload static files as artifact
         id: deployment
