--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "type-check": "tsc --noEmit"
   },
   "dependencies": {
+    "@botpress/webchat": "^2.3.8",
+    "@botpress/webchat-generator": "^0.2.15",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
