--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@botpress/webchat": "^2.3.8",
     "@botpress/webchat-generator": "^0.2.15",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-markdown": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
