--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
     "dev": "vite",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test:coverage": "vitest run --coverage",
-    "test:once": "vitest run",
-    "test": "vitest",
+    "test:coverage": "vitest run --coverage ./src",
+    "test:once": "vitest run ./src",
+    "test:ci": "vitest ./ci",
+    "test": "vitest ./src",
     "type-check": "tsc --build --noEmit"
   },
   "dependencies": {
