--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "preview": "vite preview",
     "test:coverage": "vitest run --coverage ./src",
     "test:once": "vitest run ./src",
-    "test:ci": "vitest ./ci",
+    "test:ci": "vitest run ./ci",
     "test": "vitest ./src",
     "type-check": "tsc --build --noEmit"
   },
