--- a/.github/workflows/build-web-app.yml
+++ b/.github/workflows/build-web-app.yml
@@ -17,10 +17,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-          # cache: "npm"
+          cache: "npm"
 
       - name: Install Dependencies
-        run: npm ci
+        run: |
+          rm -rf ./node_modules
+          npm ci
 
       - name: Test
         run: npm run test:coverage
