--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -19,10 +19,12 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version-file: ".nvmrc"
-          # cache: "npm"
+          cache: "npm"
 
       - name: Install Dependencies
-        run: npm ci
+        run: |
+          rm -rf ./node_modules
+          npm ci
 
       - name: Lint
         run: npm run lint
