--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -23,6 +23,8 @@ jobs:
 
       - name: Install Dependencies
         run: |
+          echo pwd
+          echo ls -alt
           rm -rf ./node_modules
           npm ci
 
