add geometry words

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,11 @@
     "cSpell.words": [
         "ACCENTI",
         "CASEI",
+        "GEOMETRYCOLLECTION",
+        "LINESTRING",
+        "MULTILINESTRING",
+        "MULTIPOINT",
+        "MULTIPOLYGON",
         "nvmrc",
         "tseslint"
     ]
