--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ogc-cql2-filters",
   "description": "A browser-oriented implementation of OGC CQL2 filters in TypeScript",
   "homepage": "https://github.com/NoamRa/ogc-cql2-filters",
-  "version": "0.6.0",
+  "version": "0.7.0",
   "type": "module",
   "scripts": {
     "parse": "npx tsx ./src/cql/main.ts",
@@ -27,7 +27,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.4",
-    "@vitest/coverage-v8": "^3.0.9",
+    "@vitest/coverage-istanbul": "^3.1.1",
     "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
@@ -38,7 +38,7 @@
     "prettier": "3.3.3",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.16.0",
-    "vite": "^6.2.2",
-    "vitest": "^3.0.9"
+    "vite": "^6.2.6",
+    "vitest": "^3.1.1"
   }
 }
