add array functions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "ACCENTI",
         "CASEI",
+        "CONTAINEDBY",
         "GEOMETRYCOLLECTION",
         "LINESTRING",
         "MULTILINESTRING",
