--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "homepage": "https://github.com/NoamRa/ogc-cql2-filters",
   "version": "0.9.1",
   "type": "module",
+  "exports": {
+    ".": "./dist/cq2-filter-parser.es.js"
+  },
   "scripts": {
     "parse": "npx tsx ./src/cql/main.ts",
     "\n========== Building ==========": "",
@@ -17,10 +20,10 @@
     "test:once": "vitest run ./src",
     "test:ci": "vitest run ./ci",
     "test": "vitest --dir ./src",
-    "type-check": "tsc --build --noEmit",
+    "type-check": "tsc --noEmit",
     "\n========== Publishing ==========": "",
     "publish:dry": "npm publish --dry-run",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run checks && npm run build"
   },
   "files": [
     "package.json",
@@ -30,29 +33,27 @@
     "dist/**/*.d.ts",
     "dist/**/*.d.ts.map"
   ],
-  "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
-  },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
     "@types/node": "^22.13.1",
-    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react": "^18.3.3",
     "@vitejs/plugin-react": "^4.3.4",
     "@vitest/coverage-istanbul": "^3.1.1",
-    "eslint": "^9.15.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-react": "^7.36.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.9",
+    "eslint-plugin-react": "^7.36.0",
+    "eslint": "^9.15.0",
     "globals": "^15.9.0",
     "prettier": "3.3.3",
-    "typescript": "^5.5.3",
+    "react-dom": "^18.3.1",
+    "react": "^18.3.1",
     "typescript-eslint": "^8.16.0",
-    "vite": "^6.3.5",
+    "typescript": "5.5.3",
     "vite-plugin-dts": "^4.5.4",
+    "vite": "^6.3.5",
     "vitest": "^3.1.1"
   }
 }
