--- a/package.json
+++ b/package.json
@@ -2,17 +2,17 @@
   "name": "cql2-filters-parser",
   "description": "A browser-oriented implementation of OGC CQL2 filters in TypeScript",
   "homepage": "https://github.com/NoamRa/ogc-cql2-filters",
-  "version": "0.9.3",
+  "version": "0.9.5",
   "type": "module",
   "exports": {
     ".": "./dist/cq2-filter-parser.es.js"
   },
   "scripts": {
-    "parse": "npx tsx ./src/cql/main.ts",
+    "\n========== CLI ==========": "",
+    "parse": "npx tsx ./src/main.ts",
     "\n========== Building ==========": "",
-    "build": "vite build && node ./ci/buildSanity.js",
     "dev": "vite",
-    "preview": "vite preview",
+    "build": "vite build && node ./ci/buildSanity.js",
     "\n========== Linting, Testing, Type checking ==========": "",
     "checks": "npm run lint && npm run type-check && npm run test:once",
     "lint": "eslint .",
