--- a/.github/workflows/build-web-app.yml
+++ b/.github/workflows/build-web-app.yml
@@ -25,20 +25,26 @@ jobs:
       - name: Test
         run: npm run test:coverage
 
-      - name: Create dist folder
-        run: mkdir ./dist
-
-      - name: Build react example
-        run: |
-          cd ./examples/cql2-filter-builder-react-app
-          npm run build
-          cd -
-          cp -R ./examples/cql2-filter-builder-react-app/dist/* ./dist
-
       - name: Copy coverage to dist
         run: |
+          mkdir ./dist
           mkdir ./dist/coverage
           cp -R ./coverage/* ./dist/coverage
+
+      - name: CD to react example
+        run: cd ./examples/cql2-filter-builder-react-app
+
+      - name: Install Dependencies
+        run: npm ci
+
+      - name: Build react example
+        run: npm run build
+
+      - name: Copy build and coverage to dist
+        run: cp -R ./dist/* ../../dist
+
+      - name: Log output
+        run: find . | sed -e "s/[^-][^\/]*\//  |/g" -e "s/|\([^ ]\)/|-\1/"
 
       - name: Upload static files as artifact
         id: deployment
