--- a/.github/workflows/build-web-app.yml
+++ b/.github/workflows/build-web-app.yml
@@ -31,17 +31,14 @@ jobs:
           mkdir ./dist/coverage
           cp -R ./coverage/* ./dist/coverage
 
-      - name: CD to react example
-        run: cd ./examples/cql2-filter-builder-react-app
-
-      - name: Install Dependencies
-        run: npm ci
-
       - name: Build react example
-        run: npm run build
+        working-directory: ./examples/cql2-filter-builder-react-app
+        run: |
+          npm ci
+          npm run build
 
       - name: Copy build and coverage to dist
-        run: cp -R ./dist/* ../../dist
+        run: cp -R ./examples/cql2-filter-builder-react-app/dist/* ./dist
 
       - name: Log output
         run: find . | sed -e "s/[^-][^\/]*\//  |/g" -e "s/|\([^ ]\)/|-\1/"
