--- a/docs/foss4g-eu-2025/carbon-config.json
+++ b/docs/foss4g-eu-2025/carbon-config.json
@@ -15,7 +15,7 @@
   "fontSize": "16px",
   "lineHeight": "133%",
   "windowControls": false,
-  "widthAdjustment": true,
+  "widthAdjustment": false,
   "lineNumbers": false,
   "firstLineNumber": 1,
   "exportSize": "4x",
@@ -23,8 +23,21 @@
   "squaredImage": false,
   "hiddenCharacters": false,
   "name": "",
-  "width": "682",
-  "highlights": {
-    "background": "rgba(246,246,253,1)"
+  "width": "620",
+  "custom": {
+    "background": "rgba(246,246,253,1)",
+    "text": "#383a42",
+    "variable": "#e06c75",
+    "variable2": "#e45649",
+    "attribute": "#d19a66",
+    "definition": "#4078f2",
+    "keyword": "#a626a4",
+    "operator": "#0184bc",
+    "property": "#4078f2",
+    "number": "#986801",
+    "string": "#50a14f",
+    "comment": "#a0a1a7",
+    "meta": "#383a42",
+    "tag": "#e45649"
   }
 }
