FOSS4G Europe 2025 session (#48)
* add minimal html demo

* add STAC spelling

* add minimal html demo

* generate code examples

* fill values in property so it won't look empty

* update code examples

* commit code images

* update image generator

* retain encoding so update in builder values won't change displayed encoding

* make text and numeric inputs narrower

* add python example

* add word

* presentation

* 0.9.12

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,8 @@
         "MULTIPOINT",
         "MULTIPOLYGON",
         "nvmrc",
+        "STAC",
+        "Straße",
         "tseslint"
     ]
 }
