add geomob 09-2025 presentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,6 +5,7 @@
         "CASEI",
         "CONTAINEDBY",
         "GEOMETRYCOLLECTION",
+        "Geomob",
         "LINESTRING",
         "MULTILINESTRING",
         "MULTIPOINT",
